# rust-directx12

./: .gitignore  README.md
dx12_triangle/: Cargo.toml
dx12_triangle/src/: Index_buffer.rs  constant_buffer.rs  depthstencil.rs  dx12error.rs  fence.rs  graphics_settings.rs  main.rs  pipeline_state.rs  render_context.rs  render_target.rs  renderer.rs  root_signature.rs  shader.rs  swapchain.rs  triangle.rs  vertex.rs  window.rs
dx12_triangle/src/shader/: dummy_shader.hlsl
dx12_viewwindow/: Cargo.toml  README.md
dx12_viewwindow/src/: main.rs
